--- a/lang/langIndex.json
+++ b/lang/langIndex.json
@@ -1,3 +1,3 @@
 {
-    "czech": "https://cdn.rawgit.com/gabakon/gabaBOT/master/lang/cs.json"
+    "czech": "https://rawgit.com/gabakon/gabaBOT/master/lang/cs.json"
 }
